--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -49,6 +49,11 @@
   url = "#featured"
   weight = 30
 
+[[main]]
+  name = "CV"
+  url = "cv/"
+  weight = 40
+
 #[[main]]
 #  name = "Posts"
 # url = "#posts"
