--- a/data/themes/darkred.toml
+++ b/data/themes/darkred.toml
@@ -5,12 +5,12 @@ name = "darkred"
 is_light = false
 
 # Primary
-primary = "#ffa000"
+primary = "#ff1010"
 
 # Menu
 menu_primary = "#fff"
 menu_text = "#000"
-menu_text_active = "#ffa000"
+menu_text_active = "#ff1010"
 menu_title = "#2b2b2b"
 
 # Home sections
