[auto] [glob] update

--- a/config.toml
+++ b/config.toml
@@ -20,56 +20,56 @@ copyright = "&copy; Akhil Sadam {year}"
 ############################
 
 # Name of Academic theme folder in `themes/`.
-theme = "academic"#["hugo-video","academic"]
+theme = "academic" #["hugo-video","academic"]
 
 # Get last modified date for content from Git?
 enableGitInfo = false
 
 # Default language to use (if you setup multilingual support)
-defaultContentLanguage = "en"
-hasCJKLanguage = false  # Set `true` for Chinese/Japanese/Korean languages.
-defaultContentLanguageInSubdir = false
-removePathAccents = true  # Workaround for https://github.com/gohugoio/hugo/issues/5687
+defaultContentLanguage = "en" 
+defaultContentLanguageInSubdir = false 
+hasCJKLanguage = false # Set `true` for Chinese/Japanese/Korean languages.
+removePathAccents = true # Workaround for https://github.com/gohugoio/hugo/issues/5687
 
-paginate = 10  # Number of items per page in paginated lists.
-enableEmoji = true
-footnotereturnlinkcontents = "<sup>^</sup>"
-ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+enableEmoji = true 
+footnotereturnlinkcontents = "<sup>^</sup>" 
+ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"] 
+paginate = 10 # Number of items per page in paginated lists.
 
 [params]
-custom_js = ["js/sc_api.js","js/daynight.js"] #"js/GSAP/gsap.min.js","js/GSAP/ScrollTrigger.min.js",
-custom_css = ["css/font.css","css/custom.css"]
+custom_css = ["css/font.css", "css/custom.css"]
+custom_js = ["js/custom.js", "js/sc_api.js", "js/daynight.js"] #"js/GSAP/gsap.min.js","js/GSAP/ScrollTrigger.min.js",
 
 [outputs]
-  home = [ "HTML", "RSS", "JSON", "WebAppManifest" ]
-  section = [ "HTML", "RSS" ]
+home = ["HTML", "RSS", "JSON", "WebAppManifest"]
+section = ["HTML", "RSS"]
 
 [mediaTypes."application/manifest+json"]
-  suffixes = ["webmanifest"]
+suffixes = ["webmanifest"]
 
 [outputFormats.WebAppManifest]
-  mediaType = "application/manifest+json"
-  rel = "manifest"
+mediaType = "application/manifest+json"
+rel = "manifest"
 
 [markup]
-  defaultMarkdownHandler = "goldmark"
-  [markup.goldmark]
-    [markup.goldmark.renderer]
-      unsafe = true  # Enable user to embed HTML snippets in Markdown content.
-  [markup.highlight]
-    codeFences = false  # Disable Hugo's code highlighter as it conflicts with Academic's highligher.
-  [markup.tableOfContents]
-    startLevel = 2
-    endLevel = 3
+defaultMarkdownHandler = "goldmark"
+[markup.goldmark]
+[markup.goldmark.renderer]
+unsafe = true # Enable user to embed HTML snippets in Markdown content.
+[markup.highlight]
+codeFences = false # Disable Hugo's code highlighter as it conflicts with Academic's highligher.
+[markup.tableOfContents]
+endLevel = 3
+startLevel = 2
 
 [imaging]
-  resampleFilter = "lanczos"
-  quality = 90
-  anchor = "smart"  # Anchor for cropping. Options include Smart and Center.
+anchor = "smart" # Anchor for cropping. Options include Smart and Center.
+quality = 90 
+resampleFilter = "lanczos" 
 
 # Taxonomies.
 [taxonomies]
-  tag = "tags"
-  category = "categories"
-  publication_type = "publication_types"
-  author = "authors"
+author = "authors"
+category = "categories"
+publication_type = "publication_types"
+tag = "tags"
