[auto] [glob] update

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -20,29 +20,36 @@
     parent = "projects"
     weight = 1
 [[main]]
-    identifier = "archvis"
-    name = "ArchViz"
-    url = "projects/archvis/"
-    parent = "projects"
-    weight = 2
-[[main]]
-    identifier = "art"
-    name = "3D Modeling & Art"
-    url = "projects/art/"
-    parent = "projects"
-    weight = 3
-[[main]]
     identifier = "simdev"
     name = "Simulations & Games"
     url = "projects/simulation/"
     parent = "projects"
+    weight = 2
+[[main]]
+    identifier = "archvis"
+    name = "ArchViz"
+    url = "projects/archvis/"
+    parent = "projects"
+    weight = 3
+[[main]]
+    identifier = "art"
+    name = "Art"
+    url = "projects/art/"
+    parent = "projects"
     weight = 4
+[[main]]
+    identifier = "model"
+    name = "Models"
+    url = "projects/model/"
+    parent = "projects"
+    weight = 5
 [[main]]
     identifier = "music"
     name = "Music"
     url = "projects/music/"
     parent = "projects"
-    weight = 5
+    weight = 6
+
 
 [[main]]
   name = "Publications"
