--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ title = "Akhil Sadam"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://akhilsadam.github.io/"
+baseurl = "https://akhilsadam.github.io/hugo-website/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
